# Oblikovati.AddIns.FEMMBridge

./: .gitignore  .golangci.yml  Makefile  README.md  export.go  go.mod  hostcaller.go  manifest.json
.github/actions/siblings/: action.yml
.github/workflows/: ci.yml  release.yml
bridge/: PIPELINE.md  ansfile.go  ansfile_test.go  bfield.go  bfield_test.go  engine.go  engine_test.go  femfile.go  hoststudy.go  legend.go  material.go  material_test.go  motor.go  motor_test.go  panel.go  panel_test.go  poly.go  poly_test.go  problem.go  results.go  section.go  solve.go  solve_test.go  surfacetint.go  surfacetint_test.go
cmd/femmfield/: main.go
scripts/: add-spdx-headers.py
vendor-src/femm/: CMakeLists.txt  NOTICE.md  UPSTREAM-README.txt
vendor-src/femm/fkern/: FemmeDocCore.h  afxcmn.h  complex.cpp  complex.h  cspars.cpp  cuthill.cpp  femmcompat.h  femmedoccore.cpp  femmedoccore.h  fkern_main.cpp  fkn.h  fknDlg.h  matprop.cpp  mesh.h  prob1big.cpp  prob2big.cpp  prob3big.cpp  prob4big.cpp  spars.cpp  spars.h
vendor-src/femm/liblua/: COMPLEX.H  afx.h  complex.h  femmcomplex.cpp  liolib.cpp  lmathlib.cpp  lstrlib.cpp
vendor-src/femm/triangle/: triangle.c
